<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_period"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/etStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:digits="1234567890-"
            android:ems="6"
            android:enabled="false"
            android:inputType="date"
            android:maxLength="10"
            android:maxLines="1"
            android:textColor="@color/white" >

            <requestFocus />
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" - "
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/etEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:digits="1234567890-"
            android:ems="6"
            android:enabled="false"
            android:inputType="date"
            android:maxLength="10"
            android:maxLines="1"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btSelectPeriod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="....." />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/rb_group_processing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/rb_block_doc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/block_doc" />

        <RadioButton
            android:id="@+id/rb_unblock_doc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unblock_doc" />

        <RadioButton
            android:id="@+id/rb_delete_doc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_doc" />

        <RadioButton
            android:id="@+id/rb_delete_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_all" />
    </RadioGroup>

    <Button
        android:id="@+id/bt_execute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_reports_execute" />

</LinearLayout>