<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_rg_name"
        android:textColor="@color/white"
        android:textSize="@dimen/font_23" />

    <RadioGroup
        android:id="@+id/rgPath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/rbSdcard"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/rbSdcard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_sdcard"
            android:textColor="@color/white"
            android:textSize="@dimen/font_14" />

        <RadioButton
            android:id="@+id/rbSystem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_system_folder"
            android:textColor="@color/white"
            android:textSize="@dimen/font_14" />
    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/white" />

</LinearLayout>