<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvStatus"
            style="@style/text_view"
            android:text="@string/toSending"
            android:textColor="@color/yellow"
            android:textSize="@dimen/font_12" />

        <TextView
            android:id="@+id/tvCountDoc"
            style="@style/text_view"
            android:textColor="@color/yellow"
            android:textSize="@dimen/font_12" />

        <TextView
            style="@style/text_view"
            android:text="@string/unit"
            android:textColor="@color/yellow"
            android:textSize="@dimen/font_12" />
    </LinearLayout>

    <LinearLayout
        style="@style/layout"
        android:orientation="horizontal" >

        <TextView
            style="@style/text_view"
            android:text="@string/restDate"
            android:textColor="@color/yellow"
            android:textSize="@dimen/font_12" />

        <TextView
            android:id="@+id/tvDateRest"
            style="@style/text_view"
            android:textColor="@color/yellow"
            android:textSize="@dimen/font_12" />
    </LinearLayout>
    
    <LinearLayout
        style="@style/layout"
        android:orientation="horizontal" >

        <TextView
            style="@style/text_view"
            android:text="@string/dbVersion"
            android:textColor="@color/yellow"
            android:textSize="@dimen/font_12" />

        <TextView
            android:id="@+id/tvDbVersion"
            style="@style/text_view"
            android:textColor="@color/yellow"
            android:textSize="@dimen/font_12" />
    </LinearLayout>

    <ListView
        android:id="@+id/lvMainMenu_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:footerDividersEnabled="true"
        android:headerDividersEnabled="true"
        android:textFilterEnabled="false" >
    </ListView>

</LinearLayout>