<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_add_order_tovarname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="товар"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <View
        android:id="@+id/View1"
        android:layout_width="fill_parent"
        android:layout_height="5dip" />

    <View
        android:id="@+id/View2"
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#FF909090" />

    <View
        android:id="@+id/View3"
        android:layout_width="fill_parent"
        android:layout_height="5dip"
        android:layout_below="@+id/View2" />

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/str_ed_izm"
                android:textColor="@color/white" />

            <Spinner
                android:id="@+id/spEdIzm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/str_count"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/etAddOrder_quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:digits="1234567890."
                android:ems="4"
                android:hint="количество"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:selectAllOnFocus="true"
                android:text=""
                android:textColor="@color/black" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/str_price"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/etAddOrder_coast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="4"
                android:enabled="false"
                android:focusable="false"
                android:inputType="numberDecimal"
                android:textColor="@color/white" >
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_sum"
                android:textColor="@color/yellow"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvAddOrderSum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textColor="@color/yellow"
                android:textSize="18dp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <Button
            android:id="@+id/btDocSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:text="@string/str_add" />
    </RelativeLayout>

</LinearLayout>